refactor: authorizeHttpRequests